# quantum-berth-allocation

./: .env.example  .gitattributes  .gitignore  .mcp.json  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  TICKETS.md  pyproject.toml
.github/workflows/: ci.yml
docs/: data-sources.md  phase-0-summary.md  phase-1-summary.md
docs/specs/: phase-1-spec.md  phase-2-spec.md
experiments/calibration/: vuosaari.json
scripts/: calibrate_vuosaari.py  record_digitraffic_fixtures.py
src/bacap/: __init__.py  cli.py  config.py
src/bacap/instances/: __init__.py  calibration.py  generator.py  meisel_bierwirth.py  schema.py
tests/: test_config.py
tests/fixtures/digitraffic/: port_calls_fit.json  vessels_fit.json
tests/instances/: test_calibration.py  test_generator.py  test_mb.py  test_schema.py
web/: README.md  package.json  pnpm-lock.yaml  vitest.config.ts
web/e2e/: home.spec.ts
web/src/: smoke.test.ts
web/src/app/: layout.tsx  page.tsx
