[project]
name = "bacap"
version = "0.1.0"
description = "Quantum-optimized berth allocation & quay crane scheduling (BACAP)"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "dimod>=0.12",
    "dwave-neal>=0.6",
    "dwave-system>=1.25",
    "qiskit>=1.2",
    "qiskit-aer>=0.15",
    "ortools>=9.10",
    "numpy>=1.26",
    "pandas>=2.2",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
]

[dependency-groups]
dev = [
    "pytest>=8.2",
    "ruff>=0.5",
    "mypy>=1.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bacap"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
